--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
         "php": ">=5.3.3",
 
         "symfony/framework-bundle":        "~2.3",
-        "stof/doctrine-extensions-bundle": "1.1.*"
+        "stof/doctrine-extensions-bundle": "1.1.*",
+        "friendsofsymfony/jsrouting-bundle": "dev-master"
     },
     "require-dev": {
         "doctrine/orm":      "~2.2",
