--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
 
         "symfony/framework-bundle":        "~2.3",
         "stof/doctrine-extensions-bundle": "1.1.*",
-        "friendsofsymfony/jsrouting-bundle": "dev-master"
+        "friendsofsymfony/jsrouting-bundle": "dev-master",
+        "genemu/form-bundle": "2.2.*",
     },
     "require-dev": {
         "doctrine/orm":      "~2.2",
