--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "stof/doctrine-extensions-bundle": "1.1.*",
         "friendsofsymfony/jsrouting-bundle": "dev-master",
         "genemu/form-bundle": "2.2.*",
+        "jms/serializer-bundle": "dev-master"
     },
     "require-dev": {
         "doctrine/orm":      "~2.2",
