update composer dependency to fosjsrouting stable

--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
 
         "symfony/framework-bundle":        "~2.3",
         "stof/doctrine-extensions-bundle": "1.1.*",
-        "friendsofsymfony/jsrouting-bundle": "dev-master",
+        "friendsofsymfony/jsrouting-bundle": "@stable",
         "genemu/form-bundle": "2.2.*",
         "jms/serializer-bundle": "dev-master",
         "a2lix/translation-form-bundle": "1.*@dev"
