--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
         "symfony/framework-bundle":        "~2.3",
         "stof/doctrine-extensions-bundle": "1.1.*",
         "friendsofsymfony/jsrouting-bundle": "@stable",
-        "jms/serializer-bundle": "dev-master"
+        "jms/serializer-bundle": "~0.12"
     },
     "require-dev": {
         "doctrine/orm":      "~2.2",
