--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
         "php": ">=5.3.3",
 
         "symfony/framework-bundle":        "~2.3",
-        "stof/doctrine-extensions-bundle": "1.2.*@dev",
+        "stof/doctrine-extensions-bundle": "1.1.*",
         "friendsofsymfony/jsrouting-bundle": "@stable",
         "jms/serializer-bundle": "~0.12"
     },
